p7/tests/t076.err
Semantic error on line 6: A double expression is not a legal array index.  The array is 'nums'.
