p7/tests/t076.gpl
double x = 3.145;
int nums[4];

on akey
{
    nums[x] = 42;
}
